2009-12-12  Eli Zaretskii  <eliz@gnu.org>

	* dispextern.h (struct text_pos): Use EMACS_INT;
	(struct glyph): Use EMACS_INT for charpos.
	(struct it): Use EMACS_INT for stop_charpos, end_charpos,
	region_beg_charpos, region_end_charpos,
	redisplay_end_trigger_charpos, and also for
	iterator_stack_entry.end_charpos and
	iterator_stack_entry.stop_charpos.

2009-12-12  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (scroll_end_callback): New function (bug #5177)
	(xg_create_scroll_bar): Call scroll_end_callback on button release
	event (bug #5177).
	(xg_event_is_for_scrollbar): != replaced with ==.

2009-12-12  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (struct ftfont_info): New member matrix.
	(ftfont_open): Setup xftfont_info->matrix.
	(MFLTFontFT): New member matrix.
	(FLOOR, CEIL, ROUND): New macros.
	(ftfont_get_metrics): Handle matrix transformation.
	(ftfont_shape_by_flt): New arg matrix.  Callers changed.

	* xftfont.c (struct xftfont_info): New member matrix.
	(xftfont_open): Setup xftfont_info->matrix.

2009-12-10  Kenichi Handa  <handa@m17n.org>

	* xdisp.c (append_space_for_newline): Consider face-remapping.

2009-12-09  Andreas Schwab  <schwab@linux-m68k.org>

	* xsettings.c: Include "keyboard.h".

	* gtkutil.c (xg_tool_bar_proxy_help_callback): Fix missing return.

	Fix implicit function declarations.
	* cmds.c: Include "frame.h".
	* frame.c: Include "font.h" also if !HAVE_WINDOW_SYSTEM.
	* frame.h: Move declaration of delete_frame outside of
	HAVE_WINDOW_SYSTEM.

2009-12-09  Ken Brown  <kbrown@cornell.edu>  (tiny change)

	* s/cygwin.h (G_SLICE_ALWAYS_MALLOC): New variable.

	* emacs.c (main): Set the G_SLICE environment variable for Cygwin
	GTK builds.

2009-12-07  Andreas Schwab  <schwab@linux-m68k.org>

	* unexelf.c (unexec): Don't search for .data twice.

2009-12-05  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (push_display_prop): Don't set avoid_cursor_p.  Return 0
	if push failed.